<?xml version="1.0"?>
<package format="3">
  <name>ros2_py_template</name>
  <version>0.1.0</version>
  <description>ROS2 Python sensor pipeline (compatible with sze-info/ros2_py_template layout).</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>GPL-3.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
